--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
   "tasks": {
-    "dev": "deno run --allow-env --allow-read --allow-write=fresh.gen.ts,/tmp --allow-run --allow-net=:7777,:8000,deno.land,esm.sh,www.mynewsdesk.com,dois.deno.dev --watch=static/,routes/ dev.ts"
+    "dev": "deno run --allow-env --allow-read --allow-write=fresh.gen.ts,/tmp --allow-run --allow-net=:7777,:8000,deno.land,esm.sh,www.mynewsdesk.com,dois.deno.dev,mediebank.deno.dev --watch=static/,routes/ dev.ts",
+    "prod": "DENO_DEPLOYMENT_ID=\"$(git rev-parse HEAD)\" deno run -A main.ts"
   },
   "importMap": "./import_map.json",
   "compilerOptions": {
