--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,8 @@
 {
   "tasks": {
-    "dev": "deno run --allow-env --allow-read --allow-write=fresh.gen.ts,/tmp --allow-run --allow-net=:7777,:8000,deno.land,esm.sh,unpkg.com,www.mynewsdesk.com,dois.deno.dev,mediebank.deno.dev,akvaplanists.deno.dev,datacite.deno.dev,api.datacite.org --watch=static/,routes/ dev.ts",
-    "prod": "DENO_DEPLOYMENT_ID=\"$(git rev-parse HEAD)\" deno run -A main.ts"
+    "dev": "deno run --allow-env --allow-read --allow-write=fresh.gen.ts,/tmp --allow-run --allow-net=:7777,:8000,deno.land,esm.sh,unpkg.com,www.mynewsdesk.com,svc.deno.dev,dois.deno.dev,mediebank.deno.dev,akvaplanists.deno.dev,datacite.deno.dev,api.datacite.org,research.deno.dev --watch=static/,routes/ dev.ts",
+    "prod": "DENO_DEPLOYMENT_ID=\"$(git rev-parse HEAD)\" deno run -A main.ts",
+    "icons": "deno run --allow-net=fonts.gstatic.com --allow-read=static --allow-write=static components/icon.tsx"
   },
   "importMap": "./import_map.json",
   "compilerOptions": {
