--- a/deno.json
+++ b/deno.json
@@ -2,7 +2,10 @@
   "tasks": {
     "dev": "deno run --allow-env --allow-read --allow-write=fresh.gen.ts,/tmp --allow-run --allow-net=:7777,:8000,deno.land,esm.sh,unpkg.com,www.mynewsdesk.com,svc.deno.dev,dois.deno.dev,mediebank.deno.dev,akvaplanists.deno.dev,datacite.deno.dev,api.datacite.org,research.deno.dev --watch=static/,routes/ dev.ts",
     "prod": "DENO_DEPLOYMENT_ID=\"$(git rev-parse HEAD)\" deno run -A main.ts",
-    "icons": "deno run --allow-net=fonts.gstatic.com --allow-read=static --allow-write=static components/icon.tsx"
+    "icons": "deno run --allow-net=fonts.gstatic.com --allow-read=static --allow-write=static components/icon.tsx",
+    "esm:add": "deno run -A https://esm.sh/v115 add",
+    "esm:update": "deno run -A https://esm.sh/v115 update",
+    "esm:remove": "deno run -A https://esm.sh/v115 remove"
   },
   "importMap": "./import_map.json",
   "compilerOptions": {
